# Galicia

./: .dockerignore  .env-test  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  dependencies.py  docker-compose-ci.yml  docker-compose.yml  hotels.py  main.py  models.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
docs/: docker.md
schemas/: schemas.py
src/: config.py  db.py  exceptions.py  main.py
src/api/: auth.py  bookings.py  dependencies.py  facilities.py  fasilities.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 2025_08_25_2010-23aeba26f2af_rooms_migration.py  2025_08_26_1450-rooms_added_63f7593d263b.py  2025_08_28_1625-created_users_model_e8caba478f0e.py  2025_08_28_1641-users_added_dde192e5890d.py  2025_08_28_1907-users_added_618aad2f7cb6.py  2025_08_28_2325-users_added_50397482b1e4.py  2025_09_04_0024-bookings_added_67b3677b8d21.py  2025_09_11_1410-add_fasilities_26a25416dfc4.py  (+6 more)
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  fasilities.py  hotels.py  images.py  rooms.py  users.py  utils.py
src/schemas/: bookings.py  facilities.py  fasilities.py  hotels.py  images.py  rooms.py  users.py
src/services/: auth.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
src/tasks/: celery_app.py  tasks.py
src/utils/: auth_utils.py  db_manager.py
tests/: conftest.py
tests/integrations_tests/: test_auth.py
tests/unit_tests/: test_auth.py
(+12 files in other folders)
